# boxity

./: FRONTEND_ARCHITECTURE.md  METHODOLOGY.md  README.md  SYSTEM_DESIGN_ARCHITECTURE.md  test_agent.py  test_out.txt
app/boxity_mobile/: bun.lockb  package.json
app/boxity_mobile/app/: index.tsx  login.tsx
app/boxity_mobile/constants/: theme.ts
app/boxity_mobile/contexts/: AuthContext.tsx
app/boxity_mobile/services/: database.ts  tts.ts
boxity/: post_11labs.json
boxity_backend/: README.md  requirements.txt  test_analyze.py
boxity_backend/.kiro/steering/: api-integration-guide.md  coding-standards.md  development-workflow.md  gemini-prompt-engineering.md  project-overview.md  quick-reference.md
boxity_backend/api/: agent.py  ai.py  auth.py  index.py  schema.py  vision.py
boxity_frontend/: ADMIN_SOLANA_INTEGRATION_EXAMPLE.tsx  APP_TSX_WITH_SOLANA.tsx  QUICK_START_SOLANA.md  SOLANA_INTEGRATION_GUIDE.md  SOLANA_SETUP_COMPLETE.md  package-lock.json  package-solana-deps.md  package.json  tsconfig.app.tsbuildinfo  vite.config.ts.timestamp-1766908862663-8dc37967dfed.mjs
boxity_frontend/.kiro/steering/: project-standards.md
boxity_frontend/solana-program/: Anchor.toml
boxity_frontend/solana-programz/: Cargo.toml  README.md
boxity_frontend/solana-programz/programs/supply-chain-trust/src/: lib.rs
boxity_frontend/src/: App.tsx
boxity_frontend/src/components/: AgentActivityLog.tsx  AgentInsightBadge.tsx  AgentWorkflowPanel.tsx  AnimatedTimeline.tsx  AuthCallback.tsx  Navbar.tsx  SolanaWalletConnect.tsx
boxity_frontend/src/lib/: contracts.ts  insforge.ts  (+3 more)
(+6 files in other folders)
