[package]
name = "supply-chain-trust"
version = "0.1.0"
description = "Supply Chain Trust Solana Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "supply_chain_trust"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"

